# CICD_template

./: .gitignore  .ruffignore  0.DEV_PLAN.md  CLAUDE.md  COMPARISON_CHART.txt  COMPLETENESS_REPORT.md  COMPLETION_SUMMARY.md  Claude.md  DOCUMENTATION_CREATED.md  IMPLEMENTATION_SUMMARY.md  MIGRATION.md  README.md  STATUS.md  WINDOWS_LINUX_COMPARISON.md
.claude/: settings.local.json
.github/actions/claude-code-runner/: action.yaml
.github/actions/monitor-ci/: action.yaml
.github/actions/setup-cpp-cache/: action.yaml
.github/actions/setup-environment/: action.yaml
.github/actions/setup-python-cache/: action.yaml
.github/claude/: CLAUDE.md
.github/claude/commands/: architecture-evolution.md  dependency-audit.md  intelligent-testing.md  knowledge-transfer.md  workspace-analysis.md
.github/claude/prompts/: code_review.md  (+3 more)
.github/workflow-templates/: cpp-ci.properties.json  cpp-ci.yml  cpp-linux-ci.yml  python-ci.properties.json  python-ci.yml
.github/workflows/: claude-code-fix-ci.yaml  claude-code-mcp-enhanced.yaml  claude-code-pr-automation.yaml  claude-code-review.yaml  cpp-ci-reusable.yaml  cpp-linux-runner.yaml  multi-project-automation.yaml  python-ci-reusable.yaml  security-enforcement.yaml
.mcp-debug-tools/: config.json
configs/cpp/: .clang-tidy  .pre-commit-config.yaml
configs/python/: .pre-commit-config.yaml  ruff.toml
cookiecutters/cpp-project/: cookiecutter.json
cookiecutters/cpp-project/{{cookiecutter.project_slug}}/: CLAUDE.md  CMakeLists.txt  LICENSE  README.md
cookiecutters/cpp-project/{{cookiecutter.project_slug}}/.github/workflows/: ai-workflow.yaml  ci.yaml  claude-code-fix-ci.yaml  claude-code-pr-automation.yaml  claude-code-review.yaml
cookiecutters/cpp-project/{{cookiecutter.project_slug}}/hooks/: pre-push
cookiecutters/cpp-project/{{cookiecutter.project_slug}}/include/{{cookiecutter.project_slug}}/: library.hpp
cookiecutters/cpp-project/{{cookiecutter.project_slug}}/src/: library.cpp  main.cpp
cookiecutters/cpp-project/{{cookiecutter.project_slug}}/tests/: CMakeLists.txt  test_example.cpp
cookiecutters/python-project/: cookiecutter.json
cookiecutters/python-project/{{cookiecutter.package_name}}/: .pre-commit-config.yaml  CLAUDE.md  pyproject.toml
cookiecutters/python-project/{{cookiecutter.package_name}}/hooks/: pre-push
cookiecutters/python-project/{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/: core.py  main.py
cookiecutters/python-project/{{cookiecutter.package_name}}/tests/: test_example.py
docs/: ARCHITECTURE_OVERVIEW.md  HIVE_CLAUDE.md  Issue_usage.txt  LABEL_AUTOMATION.md  PHASE3_IMPLEMENTATION.md  PHASE3_SUMMARY.md  PHASE4_IMPLEMENTATION_GUIDE.md  QUICK_START.md  QUICK_START_PHASE4.md  README.md  plan.md
docs/AI/: subagent_systemprompt.txt
docs/Future_dev/: DEV_PLAN - Phase3.md  DEV_PLAN - Phase5.md  DEV_PLAN - Phase8.md  plan.md
docs/Future_dev_bk/: ARCHITECTURE.md  CODE_TEMPLATES.md  DEV_PLAN - Phase1.md  DEV_PLAN - Phase2.md  DEV_PLAN - Phase4.md  DEV_PLAN - Phase6.md  DEV_PLAN - Phase7.md  DEV_PLAN.md  IMPLEMENTATION_PHASES.md  OVERVIEW.md  PHASE_1_2_FOUNDATION.md  README.md  SECURITY.md  VALIDATION.md
docs/manuals/: COOKIECUTTER_GUIDE.md  CPP_LINUX_RUNNER_GUIDE.md  Development_plan_of_this_CICD_template.md  MIGRATION_CHECKLIST.md  QUICK_START.md  RUFF_MIGRATION.md  TROUBLESHOOTING.md
git-hooks/: pre-commit  pre-push  prepare-commit-msg
pilot-migration/: README.md
runner-setup/: README-Windows.md  README.md  install-runner-linux.sh  install-runner-windows.ps1  manage-runner-service.ps1  runner-config.yaml
runner-setup/linux/: README.md  setup-cpp-tools.sh  setup-python-tools.sh
runner-setup/windows/: README.md
scripts/: README.md  benchmark-ci.sh  create-project.sh  measure-performance.sh  setup-labels.sh  sync-templates.sh  test-claude-integration.sh  test-templates.sh  total_validation.ps1  total_validation.sh  validate-claude-integration.sh  verify-setup.sh
scripts/lib/: common-utils.sh
setup-scripts/: README.md  total_run.ps1  total_run.sh
setup-scripts/linux/: README.md  install-runner-linux.sh  runner-config.yaml
setup-scripts/windows/: runner-config-windows.yaml
sine_test_1760619679/: .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  README.md
sine_test_1760619679/src/: library.cpp  main.cpp
sine_test_1760619679/tests/: CMakeLists.txt  test_example.cpp
tests/: README.md
(+80 files in other folders)
